<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/LinearAccelerometerTextViewX"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LinearAccelerometerX"
        android:textColor="#0066CC"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/LinearAccelerometerTextViewY"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearAccelerometerTextViewX"
        android:textColor="#0066CC"
        android:text="@string/LinearAccelerometerY"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/LinearAccelerometerTextViewZ"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearAccelerometerTextViewY"
        android:textColor="#0066CC"
        android:text="@string/LinearAccelerometerZ"
        android:textSize="20sp" />

</RelativeLayout>